# fishextract

./: Cargo.toml  README.md
samples/flowchart/: 10.mermaid  11.mermaid  12.mermaid  2.mermaid  4.mermaid  5.mermaid  6.mermaid  8.mermaid  9.mermaid
src/: flowchart.pest  lib.rs
